--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+        @font-face {
+            font-family: "hermit-regular";
+            src: url("%PUBLIC_URL%/fonts/Hermit-Regular.woff")
+        }
+    </style>
     <title>React App</title>
   </head>
   <body>
